--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -46,34 +46,61 @@
   margin-left: -60px;
 }
 
-.about {
- text-align: center;
 
-}
 
-.about-title {
- font-size: 70px;
-}
-
-.about-image {
-  background-image: image-url('AME895_onsengai_TP_V.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 400px;
-  margin: 0 auto;
-  margin-top: 100px;
-}
-
-.nil {
-  height: 150px;
+.about-body main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  
 }
 
 .about-introduction {
-   background-color: rgba( 0, 0, 0, 0.7);
-   width: 60%;
-   margin: 0 auto;
-   color: white;
-   padding: 20px;
+   text-align: center;
+   width: 100%;
+   color: black;
+   font-size: 20px;
+   margin: 85px 0;
+}
+
+.about-container {
+  width: 100%;
+  height: 450px;
+  display: flex;
+  text-align: center;
+  margin-top: auto;
+  align-items: center;
+}
+
+.about-container img {
+  position: center;
+}
+
+.about-container p h2 {
+  text-align: left;
+}
+
+.about-container-left {
+  width: 50%;
+}
+.about-container-right {
+  width: 50%;
+}
+
+.sign-up {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.post {
+  //background-color: red;
+}
+
+.map-search {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.diary {
+  //background-color: green;
 }
 
 .top-container:hover {
