--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -23,7 +23,7 @@
 
   <div class="article-show-image">
     <!--写真-->
-    <%= attachment_image_tag(@article, :image, :fill, 250, 250) %>
+    <%= attachment_image_tag(@article, :image, :fill, 400, 350) %>
     <div class="article-show-image-contents">
       <!--ユーザログインしていればスタンプが表示される-->
       <% if user_signed_in? %>
@@ -32,46 +32,40 @@
     </div>
   </div>
 <!--温泉情報-->
-  <table class="article-show-information">
-    <tr>
-      <td class="article-show-information-left">住所</td>
-      <td class="article-show-information-right">
+<div class="information-container">
+  <dl class="article-show-information">
+      <dt class="article-show-information-left">住所</td>
+      <dd class="article-show-information-right">
         <%= @article.address_city %>
-      </td>
-    </tr>
-    <tr>
-      <td class="article-show-information-left">公式サイト</td>
-      <td class="article-show-information-right"><%= Rinku.auto_link(@article.site_url, :all, 'target="_blank"').html_safe %></td>
-    </tr>
-    <tr>
-      <td class="article-show-information-left">料金説明</td>
-      <td class="article-show-information-right"><%= @article.tax %></td>
-    </tr>
-    <tr>
-      <td class="article-show-information-left">営業時間</td>
-      <td class="article-show-information-right"><%= @article.opening_hours %></td>
-    </tr>
-    <tr>
-      <td class="article-show-information-left">定休日</td>
-      <td class="article-show-information-right"><%= @article.closed %></td>
-    </tr>
-    <tr>
-      <td class="article-show-information-left">説明</td>
-      <td class="article-show-information-right"><%= @article.introduction %></td>
-    </tr>
-    <% if @article.user == current_user %>
-    <td><%= link_to '編集', edit_article_path(@article), class: "article-show-edit" %></td>
-    <td><%= link_to '削除', article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %></td>
-    <% end %>
-  </table>
+      <dt class="article-show-information-left">公式サイト</td>
+      <dd class="article-show-information-right"><%= Rinku.auto_link(@article.site_url, :all, 'target="_blank"').html_safe %></td>
 
+      <dt class="article-show-information-left">料金説明</td>
+      <dd class="article-show-information-right"><%= @article.tax %></td>
+
+      <dt class="article-show-information-left">営業時間</td>
+      <dd class="article-show-information-right"><%= @article.opening_hours %></td>
+
+      <dt class="article-show-information-left">定休日</td>
+      <dd class="article-show-information-right"><%= @article.closed %></td>
+  
+      <dt class="article-show-information-left">説明</td>
+      <dd class="article-show-information-right"><%= @article.introduction %></td>
+  </dl>
+  <div class="edit-delete">
+  <% if @article.user == current_user %>
+    <p><%= link_to '編集', edit_article_path(@article), class: "article-show-edit" %></p>
+    <p><%= link_to '削除', article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %></p>
+  <% end %>
+  </div>
+</div>
 <!--googlemap表示-->
 
 <div id='map'></div>
 <style>
 #map {
   height: 300px;
-  width: 400px;
+  width: 600px;
 }
 </style>
 
@@ -100,6 +94,7 @@
     }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV["Google_Maps_API_Key"]%>&callback=initMap" async defer></script>
+
 <!--コメントフォーム-->
  <div class="new-comment">
    <h3>コメントフォーム</h3>
