フォーム変更

--- a/app/views/public/articles/new.html.erb
+++ b/app/views/public/articles/new.html.erb
@@ -1,52 +1,91 @@
 <%= render 'layouts/errors', obj: @article %>
-<div class="devise-container">
+<div class="article-form-container">
 <!--新規登録フォーム-->
 <h1>新規投稿</h1>
 <%= form_with model: @article,url: articles_path,local: true do |f| %>
-  <table>
-    <div class="form-group">
-        <p><%= f.label :外観写真 %>
-        <%= f.attachment_field :image, class: "article_image" %></p>
+
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">外観写真 <span class="article-form-must">必須</span></p>
+        </div>
+        <div class="article-form-right">
+            <p><%= f.attachment_field :image, class: "article_image" %></p>
+        </div>
     </div>
 
-    <div class="form-group">
-        <p><%= f.label :名前 %>
-        <%= f.text_field :name, autofocus: true, class: "name" %></p>
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">温泉名 <span class="article-form-must">必須</span></p>
+        </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_field :name, autofocus: true, class: "name" %></p>
+        </div>
+    </div>
+    
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">住所 <span class="article-form-must">必須</span></p>
+        </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_field :address_city, autocomplete: 'address_city', class: 'address_city' %></p>
+        </div>
     </div>
 
-    <div class="form-group">
-        <p><%= f.label :住所 %>
-        <%= f.text_field :address_city, autocomplete: 'address_city', class: 'address_city' %></p>
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">公式サイト</p>
+        </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_field :site_url, autofocus: true, placeholder: "https://www.example.com/", class: "site_url" %></p>
+        </div>
     </div>
-
-    <div class="form-group">
-        <p><%= f.label :公式サイト %>
-        <%= f.text_field :site_url, autofocus: true, placeholder: "https://www.example.com/", class: "site_url" %></p>
+    
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">料金説明<br><span class="max-length">(最大60文字)</span></p>
+        </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_area :tax, autofocus: true, placeholder: "例:平日大人¥800,子供¥400", class: "tax" %></p>
+        </div>
     </div>
-
-    <div class="form-group">
-        <p><%= f.label :料金説明 %>
-        <%= f.text_area :tax, autofocus: true, placeholder: "例:平日大人¥800,子供¥400", class: "tax" %></p>
+    
+   <div class="article-form-group">
+       <div class="article-form-left">
+           <p class"article-form-label">営業時間</p>
+       </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_field :opening_hours, autofocus: true, placeholder: "例:AM10:00~PM11:00", class: "opening_hours" %></p></p>
+        </div>
     </div>
-
-    <div class="form-group">
-        <p><%= f.label :営業時間 %>
-        <%= f.text_field :opening_hours, autofocus: true, placeholder: "例:AM10:00~PM11:00", class: "opening_hours" %></p>
+    
+    <div class="article-form-group">
+        <div class="article-form-left">
+            <p class"article-form-label">定休日</p>
+        </div>
+        
+        <div class="article-form-right">
+            <p><%= f.text_field :closed, autofocus: true, placeholder: "例:毎週火曜日", class: "closed" %></p>
+        </div>
     </div>
+    
+    <div class="article-form-group">
+        <div class="article-form-left">        
+            <p class"article-form-label">説明<br><span class="max-length">(最大100文字)</span></p>
+        </div>
 
-    <div class="form-group">
-        <p><%= f.label :定休日 %>
-        <%= f.text_field :closed, autofocus: true, placeholder: "例:毎週火曜日", class: "closed" %></p>
-    </div>
-
-    <div class="form-group">
-        <p><%= f.label :説明 %>
-        <%= f.text_area :introduction, autofocus: true, placeholder: "サウナの有無、駐車場の有無などを記載", class: "introduction" %></p>
+        <div class="article-form-right">
+            <p><%= f.text_area :introduction, autofocus: true, placeholder: "サウナの有無、駐車場の有無などを記載", class: "introduction" %></p>
+        </div>
     </div>
 
     <tr class="actions">
       <%= f.submit "新規登録" ,class: 'btn btn-sm btn-success' %>
     </tr>
-  </table>
+
 <% end %>
 </div>
