--- a/app/assets/stylesheets/public/articles.scss
+++ b/app/assets/stylesheets/public/articles.scss
@@ -98,7 +98,6 @@
   padding-top: 50px;
   text-align: center;
   margin-bottom: 50px;
-  
 }
 
 .article-show-information-left {
@@ -205,4 +204,57 @@
 .ranking-grid-article:hover {
   transform: scale(1.1);
   box-shadow: 0 0 2rem rgba(0,0,0,5);
+}
+
+.article-form-container {
+    margin: 0 auto;
+    border: 2px solid #ACAAAA;
+    text-align: center;
+    padding-bottom: 30px;
+    border-radius: 2%;
+    background-color: rgba(250, 250, 250, 0.8);
+}
+
+.article-form-group {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.article-form-container .article-form-right input {
+  width: 70%;
+}
+
+.article-form-container .article-form-right textarea {
+  width: 70%;
+}
+
+.article-form-left {
+  width: 30%;
+}
+
+.article-form-left span {
+  background-color: red;
+  border-radius: 10%;
+  color: white;
+  font-size: 12px;
+}
+
+.article-form-right {
+  width: 70%;
+}
+
+.btn {
+  padding: 5px;
+  width: 15%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+.new-comment input {
+  width: 30%;
+}
+
+.new-comment textarea {
+  width: 30%;
 }
