--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -52,7 +52,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  
+
 }
 
 .about-introduction {
@@ -76,8 +76,21 @@
   position: center;
 }
 
-.about-container p h2 {
+.about-container .about-container-textbox {
+  width: 65%;
+  margin: 0 auto;
+  padding: 10px;
+  padding-bottom: 20px;
+  border: solid 1px #dcdbdb;
+}
+
+.about-container h2 {
   text-align: left;
+}
+
+.about-container p {
+  text-align: left;
+  margin: 0 auto;
 }
 
 .about-container-left {
@@ -88,19 +101,29 @@
 }
 
 .sign-up {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
 }
 
 .post {
-  //background-color: red;
-}
-
-.map-search {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
+.post .about-container-textbox {
+  border: solid 1px black;
+}
+
+.map-search {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
 .diary {
-  //background-color: green;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.diary .about-container-textbox {
+  border: solid 1px black;
 }
 
 .top-container:hover {
