--- a/app/views/public/blogs/edit.html.erb
+++ b/app/views/public/blogs/edit.html.erb
@@ -3,31 +3,54 @@
     <h2>記録を追加</h2>
     <!--記録編集フォーム-->
     <%= form_with model: @blog,url: blog_path,local: true do |f| %>
-    <table>
-        <div class="form-group">
-            <p><%= f.label :タイトル %>
-            <%= f.text_field :title, autofocus: true, class: "title" %></p>
+     <div class="article-form-group">
+            <div class="article-form-left">
+                <p class"article-form-label">タイトル <span class="article-form-must">必須</span></p>
+            </div>
+            <div class="article-form-right">
+                <p><%= f.text_field :title, autofocus: true, class: "title" %></p>
+            </div>
         </div>
-        <div class="form-group">
-            <p><%= f.label :画像 %>
-            <%= f.attachment_field :image, class: "blog_image" %></p>
+        
+        <div class="article-form-group">
+            <div class="article-form-left">
+                <p class"article-form-label">画像</p>
+            </div>
+            <div class="article-form-right">
+                <p><%= f.attachment_field :image, class: "blog_image" %></p>
+            </div>
         </div>
-        <div class="form-group">
-            <p><%= f.label :日時 %>
-            <%= f.datetime_select :start_time %></p>
-      　</div>
-        <div class="form-group">
-            <p><%= f.label :内容 %>
-            <%= f.text_area :body, autofocus: true, class: "body" %></p>
+        
+        <div class="article-form-group">
+            <div class="article-form-left">
+                <p class"article-form-label">日時 <span class="article-form-must">必須</span></p>
+            </div>
+            <div class="article-form-right">
+                <p><%= f.datetime_select :start_time %></p>
+            </div>
         </div>
-        <div class="form-group">
-            <p><%= f.label :メモ %>
-            <%= f.text_area :memo, autofocus: true, class: "memo" %></p>
+        
+        <div class="article-form-group">
+            <div class="article-form-left">
+                <p class"article-form-label">内容<br><span class="max-length">(最大400文字)</span></p>
+            </div>
+            <div class="article-form-right">
+                <p><%= f.text_area :body, autofocus: true, class: "body" %></p>
+            </div>
         </div>
+        
+        <div class="article-form-group">
+            <div class="article-form-left">
+                <p class"article-form-label">メモ<br><span class="max-length">(最大220文字)</span></p>
+            </div>
+            <div class="article-form-right">
+                <p><%= f.text_area :memo, autofocus: true, class: "memo" %></p>
+            </div>
+        </div>
+  
         <div class="actions">
           <%= f.submit "変更" ,class: 'btn btn-sm btn-success' %>
         </div>
-    </table>
     <% end %>
     <p><%= link_to '戻る', calender_user_path(@user) %></p>
 </div>
