--- a/app/views/public/users/registrations/edit.html.erb
+++ b/app/views/public/users/registrations/edit.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Update" %>
+    <%= f.submit "更新",class: "btn" %>
   </div>
   </table>
 <% end %>
