--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header id="header">
 <div class="navbar-left">
-  <a class="logo"><%= link_to (image_tag 'My Post (9).png'),root_path, class: "logo-img" %></div>
+  <a class="logo"><%= link_to (image_tag 'My Post (9).png'),root_path, class: "logo-img" %></a>
 </div>
 <nav class="navbar-right">
     <% if user_signed_in? %>
@@ -11,6 +11,7 @@
       <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
       <li><%= link_to '一覧', articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '記録', calender_user_path(current_user), class:"nav-list-item" %></li>
+      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
     </ul>
     <% elsif admin_signed_in? %>
@@ -19,6 +20,7 @@
       <h2 class="nav-list-item">管理者ページ</h2>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
     </ul>
     <% else %>
@@ -27,17 +29,18 @@
       <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path,class:"nav-list-item" %></li>
+      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item header-sign-up" %></li>
       <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
-      </ul>
+    </ul>
     <% end %>
   </nav>
   <div class="toggle_btn">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
-      <div id="mask"></div>
+  <div id="mask"></div>
 
 </header>
