--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,6 +137,7 @@ opacity: 1;
 .navbar-right {
   position: fixed;
   top: 70px;
+  right: -300px;
   color: #fff;
   padding: 36px 50px;
   transition: all 0.5s;
@@ -220,6 +221,7 @@ opacity: 1;
 .open .toggle_btn span:nth-child(3) {
   display: none;
 }
+
 #mask {
   display: none;
   transition: all 0.5s;
