--- a/app/views/public/comments/_timeline.html.erb
+++ b/app/views/public/comments/_timeline.html.erb
@@ -1,4 +1,3 @@
-<div class="scroll-list jscroll">
 <% @comments.each do |comment| %>
     <div class="timeline-comment-box">
       <div class="comment-article-info">
@@ -39,7 +38,7 @@
       <div class="timeline-comment-body">
         <p><%= comment.article.name %></p>
         <!--コメントの本文を表示-->
-        <p><%= comment.body %></p>
+        <span><%= comment.body %></span>
       </div>
       <!--コメントを投稿したユーザーのみコメント削除可能-->
       <% if comment.user == current_user %>
@@ -49,8 +48,3 @@
       <% end %>
     </div>
 <% end %>
-</div>
-<div class="pagenate"> 
-<%= paginate @comments %>
-</div>
-
