--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
       <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
       <li><%= link_to '一覧', articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '記録', calender_user_path(current_user), class:"nav-list-item" %></li>
-      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'コメント', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
     </ul>
     <% elsif admin_signed_in? %>
@@ -20,7 +20,7 @@
       <h2 class="nav-list-item">管理者ページ</h2>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
-      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'コメント', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
     </ul>
     <% else %>
@@ -29,7 +29,7 @@
       <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マップ検索', mapping_path,class:"nav-list-item" %></li>
-      <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'コメント', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item header-sign-up" %></li>
       <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
     </ul>
