--- a/app/views/public/comments/_comment.html.erb
+++ b/app/views/public/comments/_comment.html.erb
@@ -1,49 +1,38 @@
-
-    <div class="timeline-comment-box">
-      <div class="comment-article-info">
-        <div class="comment-article-info-left">
-          
-          <%= link_to article_path(comment.article) do %>
-            <%= attachment_image_tag comment.article, :image %>
-          <% end %>
-          
-        </div>
-        <div class="comment-article-info-right">
-          <p class="timeline-margin"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
-          
-          <p class="timeline-margin"><%= comment.title %></p>
-          
-                <!--コメントユーザーのマイページにリンク-->
-          <%= link_to user_path(comment.user) do %>
-            <%= attachment_image_tag comment.user, :profile_image, fallback: "My Post (11).png",class: "timeline-comment-user-image" %>
-          <% end %>
-          <p class="timeline-margin"><%= comment.user.name %></p>
-      
-          <!--コメントレビュー-->
-          <div id="star-rate-<%= comment.id %>"></div>
-            <script>
-            $('#star-rate-<%= comment.id %>').raty({
-            size: 36,
-            starOff:  '<%= asset_path('star-off.png') %>',
-            starOn : '<%= asset_path('star-on.png') %>',
-            starHalf: '<%= asset_path('star-half.png') %>',
-            half: true,
-            readOnly: true,
-            score: <%= comment.rate %>,
-            });
-            </script>
-        </div>
-      </div>
-    
-      <div class="timeline-comment-body">
-        <p><%= comment.article.name %></p>
-        <!--コメントの本文を表示-->
-        <p><%= comment.body %></p>
-      </div>
-      <!--コメントを投稿したユーザーのみコメント削除可能-->
-      <% if comment.user == current_user %>
-        <div class="comment-delete">
-          <%= link_to '削除', article_comment_path(comment.article_id, comment.id), class: 'btn-sm btn-danger', method: :delete,  remote: false %>
-        </div>
+<!--コメント一覧-->
+<% @comments.each do |comment| %>
+  <div class="comment-box">
+    <div class="comment-box-top">
+      <!--コメントユーザーのマイページにリンク-->
+      <%= link_to user_path(comment.user) do %>
+        <%= attachment_image_tag comment.user, :profile_image, fallback: "My Post (11).png",class: "comment-user-image" %>
       <% end %>
+      <%= comment.user.name %>
+      <%= comment.title %>
+      <!--コメントレビュー-->
+      <div id="star-rate-<%= comment.id %>"></div>
+        <script>
+        $('#star-rate-<%= comment.id %>').raty({
+        size: 36,
+        starOff:  '<%= asset_path('star-off.png') %>',
+        starOn : '<%= asset_path('star-on.png') %>',
+        starHalf: '<%= asset_path('star-half.png') %>',
+        half: true,
+        readOnly: true,
+        score: <%= comment.rate %>,
+        });
+        </script>
     </div>
+    <div class="comment-box-bottom">
+      <!--コメントの本文と投稿日時を表示-->
+      <div><%= comment.body %></div>
+      <div><%= comment.created_at.strftime('%Y/%m/%d') %></div>
+    </div>
+    <!--コメントを投稿したユーザーのみコメント削除可能-->
+    <% if comment.user == current_user %>
+      <div class="comment-delete">
+        <%= link_to '削除', article_comment_path(comment.article_id, comment.id), class: 'btn-sm btn-danger', method: :delete,  remote: false %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
+<div class="pagenate"><%= paginate @comments %></div>
