ゲストログイン

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,7 @@
       <li><%= link_to 'タイムライン', timeline_path, class:"nav-list-item" %></li>
       <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item header-sign-up" %></li>
       <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
+      <li><%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "nav-list-item" %></li>
     </ul>
     <% end %>
   </nav>
