タイムライン一部変更

--- a/app/views/public/comments/timeline.html.erb
+++ b/app/views/public/comments/timeline.html.erb
@@ -36,6 +36,7 @@
     
       <div class="timeline-comment-body">
         <p><%= comment.article.name %></p>
+        <p><%= comment.article.address_city %></p>
         <!--コメントの本文を表示-->
         <p><%= comment.body %></p>
       </div>
